# s3web

./: Dockerfile  MANIFEST.in  Pipfile  README.md  docker-start.sh  setup.cfg
k8s/: deployment.yml
s3web/: app.py  main.py
s3web/static/: style.css
s3web/templates/: images.html  layout.html
