[metadata]
name = simples3proxy
version = attr: s3web.__version__
description = Export S3 bucket as a web page
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/larsks/s3proxy
author = Lars Kellogg-Stedman
author_email = lars@oddbit.com

[options]
packages = find:
include_package_data = True
install_requires =
    boto3
    botocore
    flask

[options.entry_points]
console_scripts =
    s3web = s3web.main:main
